# darpi

./: .gitignore  Cargo.toml  Makefile  README.md  benchmark.yml  index.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
benches/: echo.rs  echo_hyper.rs  hello_world.rs  routing.rs
darpi-code-gen/: Cargo.toml
darpi-code-gen/src/: app.rs  handler.rs  job.rs  lib.rs  logger.rs  main_macro.rs  middleware.rs  request.rs
darpi-graphql/: Cargo.toml
darpi-graphql/src/: lib.rs
darpi-headers/: Cargo.toml
darpi-headers/src/: accept_encoding.rs  lib.rs
darpi-middleware/: Cargo.toml
darpi-middleware/src/: auth.rs  compression.rs  lib.rs
darpi-route/: Cargo.toml
darpi-route/src/: lib.rs
darpi-web/: Cargo.toml
darpi-web/src/: handler.rs  job.rs  json.rs  lib.rs  logger.rs  middleware.rs  request.rs  response.rs  ws.rs  xml.rs  yaml.rs
examples/: custom_response.rs  graphql.rs  hello_world.rs  job.rs  jobs.rs  responses.rs  routing.rs  test_handler.rs  web_socket.rs
gonzales/: Cargo.toml  README.md
gonzales/.cargo/: config.toml
gonzales/benches/: routing.rs
gonzales/src/: lib.rs
src/: lib.rs
tests/: common.rs  echo.rs  echo_path.rs  graphql.rs  hello_world.rs  job.rs  test_handler.rs  web_socket.rs
tests/compile-fail/: invalid_address.rs  invalid_address.stderr
