[package]
name = "darpi"
version = "0.1.5"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"
description = "A web framework with type safety and speed in mind"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-darpi/darpi.git"
keywords = ["darpi", "http", "web", "framework", "api"]
categories = ["network-programming", "asynchronous", "web-programming::http-server"]

[lib]
bench = false

[workspace]
members = [
    "darpi-code-gen",
    "darpi-web",
    "gonzales",
    "darpi-middleware",
    "darpi-headers",
    "darpi-graphql"
]

[profile.release]
panic = "unwind"
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
darpi-web = {path = "./darpi-web"}
darpi-code-gen = {path = "./darpi-code-gen"}
gonzales = {path = "gonzales" }
hyper = {version = "0.14.4", features = ["server", "http1", "http2", "stream", "tcp"]}
futures = "0.3.8"
shaku = {version = "0.5.0", features = ["thread_safe"]}
http = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
async-trait = "0.1.42"
chrono = "0.4"
log = "0.4.13"
tokio = {version = "1.2.0", features = ["full"]}
rayon = "1.5.0"

[dev-dependencies]
darpi-middleware = {path = "./darpi-middleware"}
darpi-headers = {git = "https://github.com/darpi-rs/darpi.git", branch = "master"}
darpi-graphql = {path = "./darpi-graphql"}
jsonwebtoken = "=7.2"
futures-util = "0.3.8"
derive_more = "0.99.11"
env_logger = "0.8.2"
async-graphql = "2.5.4"
slab = "0.4.2"
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"]}
criterion = {version = "0.3", features = ["async_tokio", "html_reports"]}
regex = "1.5.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8.3"
futures-channel = "0.3"
url = "2.0.0"
serde_urlencoded = "0.7.0"
pprof = {version="0.4.3", features=["criterion", "protobuf", "flamegraph"]}

[[bench]]
name = "hello_world"
harness = false

[[bench]]
name = "echo"
harness = false

[[bench]]
name = "echo_hyper"
harness = false

[profile.bench]
debug = true
