[package]
name = "darpi-graphql"
version = "0.1.0-beta"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"
description = "A set of middlewares for darpi"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-darpi/darpi.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.2.0", features = ["full"]}
async-trait = "0.1.42"
async-graphql = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.8"
darpi = {git = "https://github.com/darpi-rs/darpi.git", branch = "master"}
http = "0.2.1"
derive_more = "0.99.11"
serde_json = "1.0.60"
shaku = {version = "0.5.0", features = ["thread_safe"]}
async-channel = "1.6.1"
