[package]
name = "darpi-middleware"
version = "0.1.0"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"
description = "A set of middlewares for darpi"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darpi = {path = "../../darpi" }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "=7.2"
chrono = "0.4"
derive_more = "0.99.11"
shaku = {version = "0.5.0", features = ["thread_safe"]}
async-trait = "0.1.42"
async-compression = {version = "0.3.7", features = ["all", "futures-io"]}
futures-util = "0.3.8"
darpi-headers = {path = "../darpi-headers"}
log = "0.4.13"
