[package]
name = "darpi-route"
version = "0.1.0-beta"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"
description = "This crate provides routing objects for darpi"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-darpi/darpi.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
