[package]
name = "gonzales"
version = "0.0.3-beta"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"
description = "This crate provides routing objects for darpi"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-darpi/darpi.git"
keywords = ["darpi", "http", "router"]
categories = ["web-programming", "data-structures", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.6.1"

[dev-dependencies]
pprof = {version="0.4.3", features=["criterion", "protobuf", "flamegraph"]}
criterion = {version = "0.3", features = ["async_tokio", "html_reports"]}
matchit = {git = "https://github.com/ibraheemdev/matchit.git", branch = "master"}
actix-router = "0.2.7"
regex = "1.5.4"
route-recognizer = "0.3.0"

[[bench]]
name = "routing"
harness = false

[lib]
bench = false